# zemacs-gui

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: bus.rs  doc_blame.rs  doc_search.rs  edit_ops.rs  editor_tools.rs  encoding_ops.rs  git_ext.rs  git_more.rs  git_tools.rs  lib.rs  main.rs  open_intake.rs  project.rs  sidecar.rs  stryke_lsp.rs  terminal.rs  text_tools.rs  workbench_ext.rs
docs/: index.html  report.html
frontend/: fb-backend.js  index.html  main.js  menu.js  panels.css  panels.js  tmux-config.js
scripts/: copy-file-browser.mjs  copy-webui.mjs  copy-zgui-core.mjs  localinstall.sh  mvim  prepare-stryke-sidecar.mjs  prepare-zmax-sidecar.mjs  release-macos.sh  test.sh
